# LinuxDev2020

./: README.md
03_TerminalProject/: Makefile  show.c
04_Multifile/: Makefile  const.c  fun.c  outlib.h  prog.c
05_Environmental/: CMakeLists.txt  config.h.in  main.c
06_Debugging/: main.c
07_DebuggingTracing/: Makefile  ldunl.c
08_TestingCoverage/: configure.ac
08_TestingCoverage/src/: Makefile.am  buf.c  buf.h
08_TestingCoverage/tests/: Makefile.am  initialization.ts  pop.ts  subscription.ts  tests.ts
09_I18nL10n/: configure.ac
10_Documenting/: COPYING  Doxyfile.in  Makefile.am  configure.ac  guess_number.c  guess_number.md  ru.po
11_Toolkits/: Makefile  main.c
12_ScriptingText/: Makefile.am  config.h  configure.ac  const.c  fun.c  outlib.h  prog.c
13_PatchInstall/: Makefile.am  configure.ac  guess_number.c  guess_number.pot
